# vulkan-fr

./: .clang-format  .gitignore  CMakeLists.txt  compile_shaders.py
src/: camera.cpp  context.cpp  debug.h  headers.h  includes.h  main.cpp  mesh.cpp  pipeline.cpp  pipeline.h  render.cpp  scene.cpp  shader.frag  shader.vert  swapchain.cpp  swapchain.h  types.h  vert.spv
